# olympus-photosync

./: .gitignore  .travis.yml  README.rst  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: test.yaml
olympusphotosync/: cli.py  gui.py  oishare.py  utils.py
tests/: server.py  test_oishare.py  test_utils.py
tests/data/: entries.py  index_dcim.html  index_dcim_100olymp.html
