[metadata]
name = olympus-photosync
version = 1.1.0
author = Georgi Valkov
author_email = georgi.t.valkov@gmail.com

license = Revised BSD License
description = Sync photos from WiFi enabled Olympus cameras
long_description = file: README.rst
keywords = olympus, camera, sync
url = https://github.com/gvalkov/olympus-photosync

classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    License :: OSI Approved :: BSD License

[options]
packages = find:
zip_safe = True
python_requires = >=3.3

[options.entry_points]
console_scripts =
    olympus-photosync = olympusphotosync.cli:main
    olympus-photosync-gui = olympusphotosync.gui:main

[options.extras_require]
test =
    tox >= 2.6.0
    pytest >= 3.0.3
    pytest-cov >= 2.3.1
devel =
    check-manifest >= 0.35
    readme-renderer >= 16.0
    bottle
